--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,9 +9,9 @@ mybatis.mapper-locations=classpath*:mybatis/mapper/*Mapper.xml
 
 
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://47.101.30.98:53306/screendb?useUnicode=true&characterEncoding=UTF-8&useSSL=false&tinyInt1isBit=false
+spring.datasource.url=jdbc:mysql://53306/screendb?useUnicode=true&characterEncoding=UTF-8&useSSL=false&tinyInt1isBit=false
 spring.datasource.username=root
-spring.datasource.password=adbtec666
+spring.datasource.password=
 
 
 #test
